After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747296 - SPICE Password length restriction to 8 characters
SPICE Password length restriction to 8 characters
Status: RESOLVED FIXED
Product: vinagre
Classification: Applications
Component: general
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: vinagre-maint
vinagre-maint
Depends on:
Blocks:
 
 
Reported: 2015-04-03 11:22 UTC by Mike DePaulo
Modified: 2015-04-18 12:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Change the SPICE password maximum length to 60 (1.08 KB, patch)
2015-04-03 12:50 UTC, Mike DePaulo
committed Details | Review

Description Mike DePaulo 2015-04-03 11:22:43 UTC
Bugs 522476 & 652334 have already been filed about VNC password length. This bug is about SPICE password length instead.

Unlike VNC, SPICE passwords are not limited to 8 characters. The upstream SPICE code has:
#define SPICE_MAX_PASSWORD_LENGTH 60

This is impacting me because in order to connect to my VMs running on Fedora 21 with KVM via SPICE, I have to reduce their password length to 8 characters or use an alternate SPICE client (like remote-viewer, which is part of the virt-viewer package.)

Test Systems:
Client: Fedora 22 x86_64 alpha with vinagre 3.16.0-1.fc22.
KVM/SPICE host: Fedora 21 x86_64

Steps to reproduce:
1. In virt-manager on the KVM host, define the "Display" as being of "Type" "Spice server", with a password longer than 8 characters. I have both "Port" and "TLS Port" set to "Auto". The auto-assigned "Port" is 5901, and that port is what I specify in the clients. Also, set the "Address" to "All interfaces" so that the VM is accessible from remote SPICE clients.
2. Test connecting to the SPICE host with remote-viewer. Enter the URL like "spice://mothership:5901". You should then be prompted for the password. It will accept the long password and connect.
3. Try to "Connect" to the SPICE host (e.g, "mothership:5901") with Vinagre. As you try to type the 9th character, it is ignored. If you type the full length password anyway and hit connect, you will be re-prompted for the password.
Comment 1 Mike DePaulo 2015-04-03 12:50:27 UTC
Created attachment 300882 [details] [review]
Change the SPICE password maximum length to 60

I have tested this patch with vinagre 3.16.0.

Let me know if you think it should be improved, such as by including spice-protocol.h. I wasn't familiar with the spice-gtk code that you link against, so I figured I would just define SPICE_MAX_PASSWORD_LENGTH within vinagre-spice-tab.c.
Comment 2 Marc-Andre Lureau 2015-04-03 12:56:29 UTC
Review of attachment 300882 [details] [review]:

looks good to me
Comment 3 David King 2015-04-18 12:21:14 UTC
Review of attachment 300882 [details] [review]:

Pushed, with minor changes to the commit message. Thanks!