Change SPICE passwords limited to 60 characters

The limit for SPICE passowrds is much more than 8 characters.

https://bugzilla.gnome.org/show_bug.cgi?id=747296